--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,7 @@ body, html {
     flex-direction: column;
     font-family: Top One;
     font-weight: Regular;
+    user-select: none;
 }
 
 #title {
