Few small changes and stats page added
To access stats page visit /stats

--- a/static/gamestyles.css
+++ b/static/gamestyles.css
@@ -38,7 +38,7 @@ body {
     margin-bottom: 20px;
     margin-top: 3rem;
     align-self: center;
-    height: 30px; /* Adjust height as needed */
+    height: 30px;
 }
 
 .progress-bar {
