--- a/templates/game.html
+++ b/templates/game.html
@@ -36,6 +36,10 @@
 
     <p id="feedback"></p>
 
+    <script>
+        playerCounter++;
+        alert(playerCounter);
+    </script>
 
     <script src="{{ url_for('static', filename='gamescript.js') }}"></script>
 </body>
